admin-browse-prompts: fixed drop-down menu background, added 'create new genre' option, introduced stack for card spacing

--- a/talltales/src/pages/admin/dashboard.css
+++ b/talltales/src/pages/admin/dashboard.css
@@ -104,3 +104,7 @@ span {
 .MuiDataGrid-footerContainer {
   border-top-width: 0px !important;
 }
+
+.MuiMenu-list {
+  background-color: #cacaca;
+}
